# routes/web.php
@@ -1,19 +1,11 @@
 <?php
 
-use App\Http\Controllers\ProjectsController;
+use App\Http\Controllers\EmployeeController;
+use App\Http\Controllers\OvertimeController;
+use App\Http\Controllers\SettingController;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| Web Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register web routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| contains the "web" middleware group. Now create something great!
-|
-*/
-Route::resource('projects', ProjectsController::class);
-Route::get('/', function () {
-    return view('welcome');
-});
+Route::patch('/settings', [SettingController::class, 'update']);
+Route::post('/employees', [EmployeeController::class, 'store']);
+Route::post('/overtimes', [OvertimeController::class, 'store']);
+Route::get('/overtime-pays/calculate', [OvertimeController::class, 'calculate']);
